tests/sources/invalid/constructor_borrow_move_errors.fire
// Borrowed constructor argument move errors

import @firescript/std.io.println;

class Wrapper {
    string text;

    Wrapper(&mut this, string text) {
        this.text = text;
    }
}

void badMoves(&string s) {
    Wrapper a = Wrapper(s);      // Error: cannot move borrowed value into constructor param
    Wrapper b = new Wrapper(s);  // Error: cannot move borrowed value into constructor param
    println(a.text);
    println(b.text);
}

string src = "borrowed";
badMoves(src);
